--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.uptodd.uptoddapp">
+    package="com.uptodd.uptoddapp"
+    >
 
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE "
         tools:ignore="ScopedStorage"/>
@@ -15,6 +16,10 @@
         android:name="android.permission.FLASHLIGHT"
         android:permissionGroup="android.permission-group.HARDWARE_CONTROLS"
         android:protectionLevel="normal" />
+
+    <uses-sdk tools:overrideLibrary="com.paypal.pyplcheckout,com.cardinalcommerce.cardinalmobilesdk"
+
+        />
 
     <application
         android:name=".UpToddActivityClass"
@@ -33,7 +38,9 @@
         <activity android:name=".AccountActivity" />
         <activity android:name=".ReferActivity" />
         <activity android:name=".OrderActivity" />
-        <activity android:name=".ui.upgrade.PaymentActivity"/>
+        <activity android:name=".ui.upgrade.PaymentActivity"
+            >
+        </activity>
         <activity android:name=".ui.webinars.webinarslist.WebinarsActivity" />
         <activity
             android:name=".ui.webinars.fullwebinar.FullWebinarActivity"
