--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.5.21"
+    ext.nav_version = "2.3.5"
+    ext.hilt_version = '2.35'
     repositories {
         google()
         mavenCentral()
@@ -10,7 +12,10 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         //FireBase Class Path
         classpath 'com.google.gms:google-services:4.3.8'
-
+        //Navigation ClassPath
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
+        //Dagger Hilt ClassPath
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
