--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,14 @@ buildscript {
     ext.kotlin_version = "1.5.21"
     ext.nav_version = "2.3.5"
     ext.hilt_version = '2.35'
+    ext.firebase_auth = "21.0.1"
+    ext.jetpack_data_store = "1.0.0-rc02"
+    ext.firebase_couroutine="1.5.0"
+    ext.lifecycle_version = "2.3.1"
+    ext.activity_version = "1.2.3"
+    ext.kotlin_couritnes="1.5.0"
+    ext.paging_version = "3.1.0-alpha02"
+    ext.multidex_version = "2.0.1"
     repositories {
         google()
         mavenCentral()
@@ -26,6 +34,7 @@ allprojects {
         google()
         mavenCentral()
         jcenter() // Warning: this repository is going to shut down soon
+        maven { url 'https://jitpack.io' }
     }
 }
 
