--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.nav_version = "2.3.5"
     ext.hilt_version = '2.35'
     ext.firebase_auth = "21.0.1"
+    ext.firebase_store ="23.0.3"
     ext.jetpack_data_store = "1.0.0-rc02"
     ext.firebase_couroutine="1.5.0"
     ext.lifecycle_version = "2.3.1"
