Added Dependency For Client Side status:Successfully

--- a/hackerstudent/build.gradle
+++ b/hackerstudent/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     kapt("com.google.dagger:hilt-android-compiler:$hilt_version")
     //FireBase Auth
     implementation "com.google.firebase:firebase-auth-ktx:$firebase_auth"
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+    //FireBase FireStore
+    implementation "com.google.firebase:firebase-firestore-ktx:$firebase_store"
     //FireBase Coroutines
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$firebase_couroutine")
     //JetPack DataStore
