--- a/hackerstudent/src/main/AndroidManifest.xml
+++ b/hackerstudent/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.hackerstudent">
 
     <application
+        android:name=".ClientApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
