--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,4 +97,10 @@ dependencies {
     implementation "androidx.multidex:multidex:$multidex_version"
     //Lottie
     implementation 'com.airbnb.android:lottie:3.7.2'
+    //Work Manger
+    implementation("androidx.work:work-runtime-ktx:$work_version")
+    implementation("androidx.hilt:hilt-work:$work_two_version")
+    kapt("androidx.hilt:hilt-compiler:$work_two_version")
+    //Gson
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
