--- a/build.gradle
+++ b/build.gradle
@@ -4,14 +4,16 @@ buildscript {
     ext.nav_version = "2.3.5"
     ext.hilt_version = '2.35'
     ext.firebase_auth = "21.0.1"
-    ext.firebase_store ="23.0.3"
+    ext.firebase_store = "23.0.3"
     ext.jetpack_data_store = "1.0.0-rc02"
-    ext.firebase_couroutine="1.5.0"
+    ext.firebase_couroutine = "1.5.0"
     ext.lifecycle_version = "2.3.1"
     ext.activity_version = "1.3.0"
-    ext.kotlin_couritnes="1.5.0"
+    ext.kotlin_couritnes = "1.5.0"
     ext.paging_version = "3.1.0-alpha03"
     ext.multidex_version = "2.0.1"
+    ext.work_version = "2.5.0"
+    ext.work_two_version = "1.0.0"
     repositories {
         google()
         mavenCentral()
