--- a/hackerstudent/build.gradle
+++ b/hackerstudent/build.gradle
@@ -100,4 +100,8 @@ dependencies {
     implementation 'com.airbnb.android:lottie:3.7.2'
     //Bottom Nav Bar
     implementation 'com.github.ibrahimsn98:SmoothBottomBar:1.7.8'
+    //Retrofit2
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
 }
