Create Basic Layout to display courses status:Successfully

--- a/hackerstudent/src/main/AndroidManifest.xml
+++ b/hackerstudent/src/main/AndroidManifest.xml
@@ -9,9 +9,11 @@
         android:name=".ClientApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:largeHeap="true"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:hardwareAccelerated="false"
         android:theme="@style/Theme.HackingWork">
         <activity android:name=".ClientActivity"/>
         <activity android:name=".MainActivity">
@@ -21,6 +23,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
