Added Layout For Course View status:Successfully

--- a/hackerstudent/src/main/AndroidManifest.xml
+++ b/hackerstudent/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:supportsRtl="true"
         android:hardwareAccelerated="false"
         android:theme="@style/Theme.HackingWork">
-        <activity android:name=".ClientActivity"/>
+        <activity android:name=".ClientActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
