--- a/hackerstudent/build.gradle
+++ b/hackerstudent/build.gradle
@@ -28,7 +28,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    buildFeatures{
+    buildFeatures {
         viewBinding true
     }
     compileOptions {
@@ -110,4 +110,7 @@ dependencies {
     //RxJava
     implementation 'io.reactivex.rxjava3:rxjava:3.0.3'
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+
+    //Video Player Class
+    implementation 'com.github.HamidrezaAmz:MagicalExoPlayer:2.0.7'
 }
