--- a/hackerstudent/build.gradle
+++ b/hackerstudent/build.gradle
@@ -119,4 +119,6 @@ dependencies {
     implementation 'com.razorpay:checkout:1.6.12'
     //Video Player Class
     implementation 'com.github.HamidrezaAmz:MagicalExoPlayer:2.0.7'
+    //PDF View
+    implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
 }
