--- a/hackerstudent/build.gradle
+++ b/hackerstudent/build.gradle
@@ -95,6 +95,8 @@ dependencies {
     implementation 'com.mikhaellopez:circularimageview:4.3.0'
     //Permission
     implementation 'com.vmadalin:easypermissions-ktx:1.0.0'
+    //FireBase Storage
+    implementation 'com.google.firebase:firebase-storage-ktx:20.0.0'
     //Coil
     implementation("io.coil-kt:coil:1.2.2")
     //Paging
