--- a/hackerstudent/build.gradle
+++ b/hackerstudent/build.gradle
@@ -123,4 +123,6 @@ dependencies {
     implementation 'com.github.HamidrezaAmz:MagicalExoPlayer:2.0.7'
     //PDF View
     implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
+    // Rating Tab
+    implementation 'com.stepstone.apprating:app-rating:2.3.1'
 }
