--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id("androidx.navigation.safeargs.kotlin")
     id 'kotlin-parcelize'
     id 'kotlin-kapt'
+    id 'com.google.firebase.crashlytics'
     id("dagger.hilt.android.plugin")
 }
 
@@ -53,6 +54,7 @@ dependencies {
     //FireBase And Analytics
     implementation platform('com.google.firebase:firebase-bom:28.3.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-analytics-ktx:19.0.1'
     //Navigation Dependency
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
     implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
@@ -105,4 +107,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     //FireBase Storage
     implementation 'com.google.firebase:firebase-storage-ktx:20.0.0'
+    //Crash Analytics
+    implementation 'com.google.firebase:firebase-crashlytics-ktx:18.2.1'
 }
