--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.8'
         //Navigation ClassPath
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
+        //CrashAnalytics
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1'
         //Dagger Hilt ClassPath
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         // NOTE: Do not place your application dependencies here; they belong
