--- a/hackerstudent/build.gradle
+++ b/hackerstudent/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id("androidx.navigation.safeargs.kotlin")
     id 'kotlin-parcelize'
     id 'kotlin-kapt'
+    id 'com.google.firebase.crashlytics'
     id("dagger.hilt.android.plugin")
 }
 
@@ -59,6 +60,7 @@ dependencies {
     //FireBase And Analytics
     implementation platform('com.google.firebase:firebase-bom:28.3.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-analytics-ktx:19.0.1'
     //Navigation Dependency
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
     implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
@@ -125,4 +127,6 @@ dependencies {
     implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
     // Rating Tab
     implementation 'com.stepstone.apprating:app-rating:2.3.1'
+    //Crash Analytics
+    implementation 'com.google.firebase:firebase-crashlytics-ktx:18.2.1'
 }
