--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ apply plugin: 'androidx.navigation.safeargs'
 apply plugin: 'com.google.gms.google-services'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.3"
+    compileSdk 30
+    buildToolsVersion '33.0.0 rc2'
 
     defaultConfig {
         applicationId "com.uptodd.uptoddapp"
@@ -139,7 +139,7 @@ dependencies {
     implementation 'com.facebook.android:facebook-android-sdk:5.15.3'
 
     //noinspection GradleCompatible
-    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
 
     //viewpager
     implementation "androidx.viewpager2:viewpager2:1.1.0-alpha01"
