--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,16 +17,15 @@
         android:protectionLevel="normal" />
 
     <uses-sdk tools:overrideLibrary="com.paypal.pyplcheckout,com.cardinalcommerce.cardinalmobilesdk"
-
         />
 
     <application
         android:name=".UpToddActivityClass"
-        android:allowBackup="true"
         android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:networkSecurityConfig="@xml/network_security_config"
         android:label="@string/app_name"
+        android:allowBackup="true"
         android:usesCleartextTraffic="true"
         android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -39,6 +38,7 @@
         <activity android:name=".ReferActivity" />
         <activity android:name=".OrderActivity" />
         <activity android:name=".ui.upgrade.PaymentActivity"
+            android:exported="false"
             >
         </activity>
         <activity android:name=".ui.webinars.webinarslist.WebinarsActivity" />
@@ -71,12 +71,15 @@
         <activity android:name=".doctor.DoctorLogin" />
         <activity android:name=".media.MusicPlayer" />
         <activity android:name=".ui.login.facebooklogin.FacebookLoginActivity" />
-        <activity android:name=".HomeActivity" />
+        <activity android:name=".HomeActivity"
+            android:exported="false"
+            />
         <activity
             android:name=".SplashScreenActivity"
             android:label="@string/app_name"
             android:launchMode="singleInstance"
             android:screenOrientation="portrait"
+            android:exported="true"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
