--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - yes | tools/bin/sdkmanager --licenses || true
     - uses: actions/checkout@v2
     - name: set up JDK 11
       uses: actions/setup-java@v2
