--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -6,13 +6,15 @@ on:
   pull_request:
     branches: [ master ]
 
+before_install:
+- yes | sdkmanager "platforms;android-27"
+
 jobs:
   build:
 
     runs-on: ubuntu-latest
 
     steps:
-    - yes | tools/bin/sdkmanager --licenses || true
     - uses: actions/checkout@v2
     - name: set up JDK 11
       uses: actions/setup-java@v2
