--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,6 +22,7 @@ jobs:
         cache: gradle
 
     - name: Grant execute permission for gradlew
+      run: yes | sdkmanager --licenses
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
