--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -6,7 +6,6 @@ on:
   pull_request:
     branches: [ master ]
 
-
 jobs:
   build:
 
@@ -20,15 +19,14 @@ jobs:
         java-version: '11'
         distribution: 'adopt'
         cache: gradle
-
-   
-    
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-
-    - name: Accept license
-      run: yes | sdkmanager --licenses
-
     - name: Build with Gradle
       run: ./gradlew build
-    
+    - name: Build debug APK
+      run: bash ./gradlew assembleDebug --stacktrace
+    - name: Upload APK
+      uses: actions/upload-artifact@v1
+      with:
+          name: app
+          path: app/build/outputs/apk/debug/app-debug.apk
