--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "com.uptodd.uptoddapp"
         minSdkVersion 19
         targetSdkVersion 30
-        versionCode 29
-        versionName "4.4"
+        versionCode 32
+        versionName "4.6"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -229,6 +229,10 @@ dependencies {
 
     //showcase
     implementation 'com.github.erkutaras:ShowcaseView:1.5.0'
+
+    implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
+
+    implementation 'com.mindorks.android:prdownloader:0.6.0'
 
 
 }
