--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ apply plugin: 'com.google.firebase.crashlytics'
 
 android {
     compileSdk 30
-    buildToolsVersion '32.0.0'
+    buildToolsVersion '33.0.0 rc2'
 
     defaultConfig {
         applicationId "com.uptodd.uptoddapp"
