--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,9 @@
         <activity android:name=".AccountActivity" />
         <activity android:name=".ReferActivity" />
         <activity android:name=".OrderActivity" />
-        <activity android:name=".ui.otherScreens.otherScreens.stories.StoryPlayActivity"/>
+        <activity android:name=".ui.otherScreens.otherScreens.stories.StoryPlayActivity"
+            android:hardwareAccelerated="true"
+            />
         <activity android:name=".ui.upgrade.PaymentActivity"
             android:exported="false"
             >
