--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ android {
 }
 
 dependencies {
-    
+
     implementation files('libs\\YouTubeAndroidPlayerApi.jar')
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 
@@ -156,7 +156,7 @@ dependencies {
 
     //Exoplayer
 //    implementation "com.google.android.exoplayer:exoplayer-core:2.8.3"
-   implementation "com.google.android.exoplayer:exoplayer-ui:2.8.3"
+    implementation "com.google.android.exoplayer:exoplayer-ui:2.8.3"
 //    implementation 'com.google.android.exoplayer:exoplayer-hls:2.8.3'
 //    implementation 'com.google.android.exoplayer:exoplayer-dash:2.8.3'
 //    implementation 'com.google.android.exoplayer:exoplayer-smoothstreaming:2.8.3'
@@ -234,5 +234,11 @@ dependencies {
 
     implementation 'com.mindorks.android:prdownloader:0.6.0'
 
+
+    //Retrofit It
+
+    implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2"
+    implementation("com.squareup.retrofit2:retrofit:2.9.0")
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
 }
