--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.1'
 
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    //implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
 
     // Room and Lifecycle dependencies
@@ -72,10 +72,10 @@ dependencies {
     implementation "androidx.room:room-ktx:$version_room"
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     kapt "androidx.room:room-compiler:$version_room"
-    implementation "androidx.lifecycle:lifecycle-extensions:$version_lifecycle_extensions"
+   // implementation "androidx.lifecycle:lifecycle-extensions:$version_lifecycle_extensions"
 
     //Picasso for image loader
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    //implementation 'com.squareup.picasso:picasso:2.71828'
 
 
     implementation 'com.google.firebase:firebase-auth:20.0.0'
@@ -100,7 +100,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:18.0.0'
 
     //To play gifs
-    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
+    //implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
 
     //Calendar View
     implementation 'com.github.kizitonwose:CalendarView:0.4.5'
@@ -118,10 +118,10 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
 
     // optional - Kotlin Extensions and Coroutines support for Room
-    implementation "androidx.room:room-ktx:$room_version"
+//    implementation "androidx.room:room-ktx:$room_version"
 
     // optional - Test helpers
-    testImplementation "androidx.room:room-testing:$room_version"
+//    testImplementation "androidx.room:room-testing:$room_version"
 
     //coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
@@ -178,7 +178,7 @@ dependencies {
 
 
     //material design
-    implementation 'com.google.android.material:material:1.2.1'
+//    implementation 'com.google.android.material:material:1.2.1'
 
     //recycler view swipe decoration
     implementation 'it.xabaras.android:recyclerview-swipedecorator:1.2.3'
@@ -190,7 +190,7 @@ dependencies {
     implementation 'com.amitshekhar.android:android-networking:1.0.2'
 
     //internet connection available?
-    implementation 'com.github.pwittchen:reactivenetwork-rx2:3.0.8'
+    //implementation 'com.github.pwittchen:reactivenetwork-rx2:3.0.8'
 
     //CameraView Library for Camera
     api 'com.otaliastudios:cameraview:2.7.0'
@@ -206,11 +206,11 @@ dependencies {
     implementation 'com.coolerfall:android-http-download-manager:1.6.3'
 
     // work manager testing dependency
-    androidTestImplementation "androidx.work:work-testing:2.4.0"
+    //androidTestImplementation "androidx.work:work-testing:2.4.0"
 
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation "com.squareup.moshi:moshi-kotlin:1.11.0"
-    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    //implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    //implementation "com.squareup.moshi:moshi-kotlin:1.11.0"
+    //implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
 
     // swipe refresh layout
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
@@ -222,7 +222,7 @@ dependencies {
     implementation('com.paypal.checkout:android-sdk:0.2.0')
 
     //youtube
-    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'
+//    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'
 
     //onboard screen
     implementation 'com.cuneytayyildiz:onboarder:1.0.0'
