--- a/app/build.gradle
+++ b/app/build.gradle
@@ -148,7 +148,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
 
     //viewpager
-    implementation "androidx.viewpager2:viewpager2:1.1.0-alpha01"
+    implementation "androidx.viewpager2:viewpager2:1.1.0-beta01"
 
     //Glide
     implementation "com.github.bumptech.glide:glide:4.11.0"
