--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,7 @@ android {
 
 dependencies {
 
-    implementation files('libs\\YouTubeAndroidPlayerApi.jar')
+//    implementation files('libs\\YouTubeAndroidPlayerApi.jar')
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
