--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,6 +72,7 @@
         <activity
             android:name=".ui.todoScreens.TodosListActivity"
             android:launchMode="singleInstance"
+            android:hardwareAccelerated="true"
             android:theme="@style/AppThemeNoActionBar"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
             />
